--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "baseUrl": "./",
     "paths": {
       "@app/*": ["src/app/*"],
+      "@assets/*": ["src/assets/*"],
       "@environments/*": ["src/environments/*"]
     }
   },
