--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
     "baseUrl": "./",
     "paths": {
       "@app/*": ["src/app/*"],
+      "@pages/*": ["src/app/pages/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@services/*": ["src/app/services/*"],
       "@assets/*": ["src/assets/*"],
       "@environments/*": ["src/environments/*"]
     }
